<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/cat_btn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:background="@color/background_blue"
        android:contentDescription="@string/cat_image"
        android:paddingVertical="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/cat_svgrepo_com"
        app:layout_constraintEnd_toStartOf="@id/dog_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/dog_btn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/background_blue"
        android:contentDescription="@string/dog_image"
        android:paddingVertical="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/dog_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cat_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/greetings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_btn"
        app:layout_constraintVertical_bias=".05" />


    <TextView
        android:id="@+id/sentence_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/sentence"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="3dp"
        android:layout_marginVertical="10dp"
        android:background="@color/background_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sentence_tv" />

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_blue"
        android:text="@string/beget_button"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cat_btn"
        app:layout_constraintVertical_bias=".95" />


</androidx.constraintlayout.widget.ConstraintLayout>